# artifice

./: Artifice.md  Cargo.toml  README.md  dockerfile  flake.nix
.github/workflows/: PushImageToDockerHub.yml  rust.yml
src/: captions.rs  captions_rewrite.rs  ffmpeg_babysitter.rs  job.rs  main.rs  media_helpers.rs  queue.rs
src/commands/: mod.rs  ping.rs  transform.rs
